# codex-one

./: README.md  agents.md  requirements.txt  setup.sh
dspy/: __init__.py
dspy_mcp/: .gitignore  README.md  pyproject.toml
dspy_mcp/dspy_mcp/: __init__.py
dspy_mcp/dspy_mcp/client/: app.py
dspy_mcp/dspy_mcp/server/: __init__.py  app.py
dspy_mcp/dspy_mcp/tools/: echo.py
mcp/: AGENT_README.md  DEVELOPMENT.md  README.md  RL_AGENT_README.md  __init__.py  direct_rl_agent.py  mcp_stdio_client.sh  mcp_types.py  run_agent.sh  run_direct_rl.sh  run_dspy_agent.sh  run_mcp_server.sh  run_mcp_stdio.sh  run_rl_agent.py  simple_dspy_agent.py  test_rl_agent_stdio.sh  test_rl_direct.sh
mcp/dspy_mcp/: __init__.py  config.py  logging_config.py
mcp/dspy_mcp/pipeline/: agent_pipeline.py  rl_agent.py  rl_pipeline.py
mcp/dspy_mcp/server/: app.py
mcp/server/: __init__.py  fastmcp.py
mcp/tests/: __init__.py  test_echo_pipeline.py  test_rl_pipeline.py
plans/: mcp.md  reseach.md
